[package]
name = "bastion-core"
version = "0.1.0"
edition = "2021"
description = "Core types and primitives for Bastion"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "1"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
base64 = "0.21"
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
