[package]
name = "bastion-session"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Session subsystem for Bastion"

[dependencies]
bastion-core = { path = "../core" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
thiserror = "1"
serde_json = "1"
